# ostov-task

./: .gitignore  README.md  graph_data.txt  requirements.txt  start.bat  start.sh
.github/workflows/: build-windows.yml
src/: main.py
src/ostov_task/: CMakeLists.txt  main.cpp
